# lib_esp32

./: README.md  esp32.ini  library.properties
include/: board.h
src/: CMakeLists.txt  board_esp32.h  board_esp32.md  board_esp32_delay.c  board_esp32_io.c  board_esp32_nvm.c  board_esp32_pins.h  board_esp32_serial.c  board_esp32_thread.c  board_esp32_timer.c
src/pins/: board_esp32_pins.h
